infra/k8s/server-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: olasupoodebiyi/server
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: server-srv
spec:
  selector:
    app: server
  ports:
    - name: server
      protocol: TCP
      port: 4000
      targetPort: 4000
