infra/k8s/ingress-srv.yaml
# apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: testing.dev
      http:
        paths:
          - path: /api/last/?(.*)
            backend:
              serviceName: server-srv
              servicePort: 4000
          - path: /
            backend:
              serviceName: server-srv
              servicePort: 4000
